@@ -57,6 +57,7 @@ scontrol [<OPTION>] [<COMMAND>]
 			      scontrol is ran on, and only for those
 			      processes spawned by Slurm and their
 			      descendants)
+     liststeps		      List steps on node where scontrol is run.
      notify <job_id> msg      send message to specified job
      oneliner                 report output one record per line.
      pidinfo <pid>            return slurm job information for given pid.
